solc_mutator_ossfuzz_seed_corpus/test_sol/test_0caad49e443a2804f758e1254dfe6deb6fb6331696a1cfdc47fac615cd0e5d80_282c21b00544bba7afd49703b04179daad7a9fed_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
struct St0 {
  string el0;
  function (function (uint160[][][][] memory) external   returns (bytes18), string memory) external   returns (address) el1;
}

==== Source: su1.sol ====
pragma solidity >= 0.0.0;
function f0(uint200[1][4][6][10][8] memory i0,bytes6 i1)     returns(bytes memory o0,uint184 o1)
{
  assembly
  {
    function af0(ai0, ai1) -> ao0, ao1, ao2, ao3, ao4, ao5, ao6, ao7, ao8, ao9, ao10, ao11
    {
      pop(115792089237316195423570985008687907853269984665640564039457584007913129639935)
      for 
      {
        return(0, byte(sload(115792089237316195423570985008687907853269984665640564039457584007913129639935), 48025181581117750094286905992817899357997059746810147091016453268489588470824))
      }
      ai0
      {
        extcodecopy(0, add(0x80, mod(ai0, 1024)), sgt(ai1, 35274258557662831068332995202841547862690491891519638671405762062330926758458), mod(115792089237316195423570985008687907853269984665640564039457584007913129639935, 1024))
      }
      {
      }
    }
    function af1(ai2, ai3, ai4, ai5, ai6, ai7, ai8, ai9, ai10, ai11, ai12, ai13, ai14, ai15, ai16, ai17) -> ao12, ao13, ao14, ao15, ao16, ao17, ao18, ao19, ao20
    {
      let al0, al1, al2, al3, al4, al5, al6, al7, al8 := af1(18310537169920818002596001830573089050317397712658305158935575142182379414959, ai4, 0, 0, 115792089237316195423570985008687907853269984665640564039457584007913129639935, 115792089237316195423570985008687907853269984665640564039457584007913129639935, 58008383477690981694052812705630595599766705009471986682253147600914214029145, 0, 38439767596428382494735878966249104481123317666568732355510607934061451479970, 115174016642126032853480532720725962475763759025592218557761797837305762600464, 115792089237316195423570985008687907853269984665640564039457584007913129639935, 46978577501111228374897441465307155105353519123135394392626864752927446605089, 0, 92967025660457647603302025939960088213755965956252488971040096934115686209040, 115792089237316195423570985008687907853269984665640564039457584007913129639935, 0)
      switch ai10
      case 115792089237316195423570985008687907853269984665640564039457584007913129639935
      {
      }
    }
  }
  assembly
  {
    codecopy(add(0x80, mod(create2(mload(add(0x80, mod(ai0, 1024))), add(0x80, mod(ai0, 1024)), 28630060399560390651874465873891434217696088979269560513342103508132991121730, 115792089237316195423570985008687907853269984665640564039457584007913129639935), 1024)), keccak256(i1, 115792089237316195423570985008687907853269984665640564039457584007913129639935), mod(i0, 1024))
  }
}
// ----
// DeclarationError 8198: (su1.sol:2097-2100): Identifier "ai0" not found.
// DeclarationError 8198: (su1.sol:2069-2072): Identifier "ai0" not found.
